Solutions of the exercises for the course Java Functional Interfaces and Streams