@@ -2,6 +2,7 @@ package com.amigoscode._7_streams._1_basics;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -18,31 +19,20 @@ public class FilterBasics {
         List<String> cities = List.of("Amsterdam", "Berlin", "Athens", "Barcelona", "Copenhagen", "Auckland");
         List<String> withNulls = Arrays.asList("Hello", null, "World", null, "Java", "Streams", null);
 
-        // TODO: 1 - Filter 'words' keeping only strings with length > 5
-        //           Print each matching word
+        words.stream().filter(s -> s.length() > 5).forEach(System.out::println);
 
+        numbers.stream().filter(n -> n % 2 == 0).forEach(System.out::println);
 
-        // TODO: 2 - Filter 'numbers' keeping only even numbers
-        //           Print each even number
+        cities.stream().filter(s -> s.startsWith("A")).forEach(System.out::println);
 
+        words.stream()
+                .filter(s -> s.length() > 3)
+                .filter(s -> s.contains("a"))
+                .forEach(System.out::println);
 
-        // TODO: 3 - Filter 'cities' keeping only those starting with "A"
-        //           Print each matching city
+        withNulls.stream().filter(Objects::nonNull).forEach(System.out::println);
 
-
-        // TODO: 4 - Chain two filters on 'words': first keep words with length > 3,
-        //           then keep only words that contain the letter "a"
-        //           Print each matching word
-
-
-        // TODO: 5 - Filter null values from 'withNulls' list
-        //           Print each non-null element
-        //           Hint: Use Objects::nonNull or a lambda
-
-
-        // TODO: 6 - Filter 'numbers' to keep only numbers greater than 5,
-        //           then collect the results to a new List and print the list
-        //           Use Collectors.toList()
+        List<Integer> greaterThanFive = numbers.stream().filter(n -> n > 5).toList();
 
     }
 }
